# web-tech-and-app

./: README.md  webcalc.html
calc_service/: main.py  pyproject.toml
calc_service/database/: __init__.py  connection.py
calc_service/models/: __init__.py  expression.py  schemas.py
calc_service/routes/: __init__.py  eval.py  mem.py  ocr.py
